--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,6 @@ exclude: ['README.markdown']
 permalink: ':title'
 highlighter: pygments
 safe: false
-title: 'Carte'
+title: 'Ammy API'
+sass:
+  sass_dir: _sass
