--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 ---
 exclude: ['README.markdown']
 permalink: ':title'
-highlighter: pygments
+highlighter: rouge
+baseurl: "/ammy_api/" # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
+url: "https://dfabreguette-ap.github.io/"  # the base hostname & protocol for your site, e.g. http://example.com
 safe: false
 title: 'Ammy API'
 sass:
